istio/istioinaction/gateway-api/web-api-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: webapp-gateway
  namespace: istio-ingress
spec:
  gatewayClassName: istio
  listeners:
  - name: default
    hostname: "*.172.19.8.1.nip.io"
    port: 80
    protocol: HTTP
    allowedRoutes:
      namespaces:
        from: All
