istio/istioinaction/gateway-api/catalog-api-http.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: catalog-httprouite
  namespace: istio-demo
spec:
  parentRefs:
  - name: webapp-gateway
    namespace: istio-ingress
  hostnames: ["catalog.172.19.8.1.nip.io"]
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: catalog
      port: 80
