istio/istioinaction/gateway-api/catalog-versions.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: catalog-httprouite
  namespace: istio-demo
spec:
  parentRefs:
  - name: webapp-gateway
    namespace: istio-ingress
  hostnames: ["catalog.172.19.8.1.nip.io"]
  rules:
  - matches:
    - headers:
      - name: x-dark-launch
        value: "v2"
    backendRefs:
    - name: catalog-version-v1
      port: 80
    - name: catalog-version-v2
      port: 80
