istio/istioinaction/gateway-api/web-api-http.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http
  namespace: istio-demo
spec:
  parentRefs:
  - name: webapp-gateway
    namespace: istio-ingress
  hostnames: ["webapp.172.19.8.1.nip.io"]
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: webapp
      port: 80
